--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,14 @@ nav{
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  cursor: pointer;
+  padding-top: 10px;
+  border-radius: 12px 12px 0 0;
+  transition: .4s;
+}
+
+.status>div:hover{
+  background-color: rgba(189, 189, 189, 0.3);
 }
 
 .status h3{
@@ -75,6 +83,11 @@ nav{
   border-radius: 12px;
   color: #efefef;
   cursor: pointer;
+  transition: .4s;
+}
+
+.add-btn:hover{
+  background-color: rgba(47, 100, 255, 1)
 }
 
 .todo-container{
@@ -90,6 +103,22 @@ nav{
   width: 20px;
 }
 
+.oneTask{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.oneTask i{
+  color: rgba(189, 189, 189, 1);
+  cursor: pointer;
+  transition: .4s;
+}
+
+.oneTask i:hover{
+  padding-right: 5px;
+}
+
 label{
   display: flex;
   gap: 5px;
@@ -98,4 +127,26 @@ label{
 
 .completed{
   text-decoration: line-through;
+}
+
+.del-container{
+  display: flex;
+  width: 600px;
+  margin-top: 20px;
+  justify-content: flex-end;
+}
+
+.del-container button{
+  width: 100px;
+  height: 40px;
+  background-color: rgba(235, 87, 87, 1);
+  border: 1px solid rgba(235, 87, 87, 1);
+  border-radius: 4px;
+  color: #efefef;
+  cursor: pointer;
+  transition: .4s;
+}
+
+.del-container button:hover{
+  background-color: rgba(255, 50, 50, 1)
 }
